--- a/blogpost.html
+++ b/blogpost.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El título del post</title>
-    <link rel="stylesheet" href="./css/estilos.css">
-</head>
-<body>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus placeat sapiente sunt necessitatibus labore excepturi sed hic laudantium quae expedita. Accusantium accusamus excepturi minima mollitia voluptatibus, distinctio molestiae eveniet itaque.</p>
-</body>
+<html>
+    <head>
+        <title>El titulo del post</title>
+        <link rel="stylesheet" href="css/estilos.css" />
+    </head>
+    <body>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            </div>
+        </div>
+    </body>
 </html>
